DM-2 feat: CSS finalizado

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <p id="texto">0</p>
     </div>
 
-    <div class="botao">
+    <div class="botao-contador">
         <div class="botao-aumentar">
             <button>Aumentar</button>
         </div>
@@ -23,6 +23,26 @@
         </div>
     </div>
 
+    <div class="botoes-coloridos">
+        <div class="botao-alterar-cor-fundo">
+            <button>Alterar Cor do Fundo</button>
+        </div>
+
+
+        <div class="botao-alterar-cor-titulo">
+            <button>Alterar Cor do Título</button>
+        </div>
+
+
+        <div class="botao-alterar-cor-paragrafo">
+            <button>Alterar Cor do Parágrafo</button>
+        </div>
+
+    </div>
+
+    <div class="botao-alterar-fonte-titulo">
+        <button>Alterar Fonte do Título</button>
+    </div>
 
     <script src="/script.js"></script>
 
